--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,10 +1,16 @@
 # Block
 block.cyber-io-ic-machine.name=IC Machine
-block.cyber-io-ic-machine.description=A machine which can make chips
+block.cyber-io-ic-machine.description=A machine which can make chips.
 block.cyber-io-receiver.name=Receiver
 block.cyber-io-receiver.description=Receives the data.
 block.cyber-io-sender.name=Sender
 block.cyber-io-sender.description=Sends the data.
+block.cyber-io-virus.name=Virus
+block.cyber-io-virus.description=An infinite spreading virus.
+block.cyber-io-land-projector.name=Land Projector
+block.cyber-io-land-projector.description=Projects the holographic land where support you to build block on it.
+block.cyber-io-holo-floor.name=Holofloor
+block.cyber-io-holo-floor.description=Holographic floor.
 # Item
 item.cyber-io-ic.name=IC
-item.cyber-io-ic.description=A chip
+item.cyber-io-ic.description=A chip.
