FIGHT AGAINST GITHUB ACTION

--- a/.github/workflows/AutoReleaseWhenPush.yml
+++ b/.github/workflows/AutoReleaseWhenPush.yml
@@ -48,6 +48,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release delete AUTOR --yes || true
+          git push origin :AUTOR || true
       - name: Get current date
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
