--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,10 @@ apply plugin: "java"
 
 version '1.0'
 
-//compile java 16 code, targeting java 8
 targetCompatibility = 8
-sourceCompatibility = JavaVersion.VERSION_16
+// I don't use "com.github.Anuken:jabel:$jabelVersion" so sourceCompatibility is not 16 but 8
+// JavaVersion.VERSION_16
+sourceCompatibility = 8
 
 sourceSets.main.java.srcDirs = ["src"]
 
