Underdrive and uninfected blocks registry

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,4 +1,4 @@
-# Block
+# Blocks
 block.cyber-io-ic-machine.name=IC Machine
 block.cyber-io-ic-machine.description=A machine which can make chips.
 block.cyber-io-receiver.name=Receiver
@@ -11,6 +11,12 @@ block.cyber-io-land-projector.name=Land Projector
 block.cyber-io-land-projector.description=Projects the holographic land where support you to build block on it.
 block.cyber-io-holo-floor.name=Holofloor
 block.cyber-io-holo-floor.description=Holographic floor.
-# Item
+block.cyber-io-anti-virus.name=Anti-Virus
+block.cyber-io-anti-virus.description=An anti-virus software
+block.cyber-io-underdrive-projector.name=Underdrive Projector
+block.cyber-io-underdrive-projector.description=Slow down the surrounding machines.
+# Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
+#Bars
+bar.cyber-io.generation=Generation {0}
