--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -20,3 +20,5 @@ item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
 #Bars
 bar.cyber-io.generation=Generation {0}
+bar.cyber-io.slow-down=Boost: -{0}%
+bar.cyber-io.efficiency-absorption=EFF Absorb: {0}%
