--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -22,3 +22,5 @@ item.cyber-io-ic.description=A chip.
 bar.cyber-io.generation=Generation {0}
 bar.cyber-io.slow-down=Boost: -{0}%
 bar.cyber-io.efficiency-absorption=EFF Absorb: {0}%
+bar.cyber-io.team=Team: {0}
+bar.cyber-io.spiral-rotate-speed=RotateSPD: {0}
