--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -15,6 +15,8 @@ block.cyber-io-anti-virus.name=Anti-Virus
 block.cyber-io-anti-virus.description=An anti-virus software
 block.cyber-io-underdrive-projector.name=Underdrive Projector
 block.cyber-io-underdrive-projector.description=Slow down the surrounding machines.
+block.cyber-io-hyper-overdrive-sphere.name=Hyper Overdrive Sphere
+block.cyber-io-hyper-overdrive-sphere.description=LIGHT SPEED!!!
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
@@ -24,3 +26,5 @@ bar.cyber-io.slow-down=Boost: -{0}%
 bar.cyber-io.efficiency-absorption=EFF Absorb: {0}%
 bar.cyber-io.team=Team: {0}
 bar.cyber-io.spiral-rotate-speed=RotateSPD: {0}
+bar.cyber-io.alpha=Alpha: {0}
+bar.cyber-io.range=Range: {0}
