--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -27,4 +27,5 @@ bar.cyber-io.efficiency-absorption=EFF Absorb: {0}%
 bar.cyber-io.team=Team: {0}
 bar.cyber-io.spiral-rotate-speed=RotateSPD: {0}
 bar.cyber-io.alpha=Alpha: {0}
-bar.cyber-io.range=Range: {0}
+bar.cyber-io.range=Range: {0} blocks
+bar.cyber-io.cool-down=Cool Down: {0}s
