--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -29,3 +29,4 @@ bar.cyber-io.spiral-rotate-speed=RotateSPD: {0}
 bar.cyber-io.alpha=Alpha: {0}
 bar.cyber-io.range=Range: {0} blocks
 bar.cyber-io.cool-down=Cool Down: {0}s
+bar.cyber-io.is-alive=Is Alive: {0}
