--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -30,3 +30,6 @@ bar.cyber-io.alpha=Alpha: {0}
 bar.cyber-io.range=Range: {0} blocks
 bar.cyber-io.cool-down=Cool Down: {0}s
 bar.cyber-io.is-alive=Is Alive: {0}
+bar.cyber-io.is-projecting=Is Projecting: {0}
+bar.cyber-io.rest-restore=Rest Restore: {0}
+bar.cyber-io.charge=Charge: {0}
