--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -8,17 +8,19 @@ block.cyber-io-sender.description=Sends the data.
 block.cyber-io-virus.name=Virus
 block.cyber-io-virus.description=An infinite spreading virus.
 block.cyber-io-land-projector.name=Land Projector
-block.cyber-io-land-projector.description=Projects the holographic land where support you to build block on it, powered by LiplumCloud Inc.
+block.cyber-io-land-projector.description=Projects the holographic land which can support you to build block on it, powered by Plum Star Inc.
 block.cyber-io-holo-floor.name=Holofloor
 block.cyber-io-holo-floor.description=Holographic floor.
 block.cyber-io-holo-wall.name=Holo Wall
-block.cyber-io-holo-wall.description=Holographic wall. It will restore itself automatically powered by LiplumCloud Inc.
+block.cyber-io-holo-wall.description=Holographic wall, powered by Plum Star Inc. It will regenerate health automatically over time.
+block.cyber-io-holo-wall-large.name=Large Holo Wall
+block.cyber-io-holo-wall-large.description=The large holographic wall, powered by Plum Star Inc. It will regenerate health automatically over time.
 block.cyber-io-anti-virus.name=Anti-Virus
 block.cyber-io-anti-virus.description=An anti-virus software
 block.cyber-io-underdrive-projector.name=Underdrive Projector
 block.cyber-io-underdrive-projector.description=Slow down the surrounding machines.
 block.cyber-io-cloud.name=Cloud
-block.cyber-io-cloud.description=Stores your data, powered by LiplumCloud Inc. You can access them where they are!
+block.cyber-io-cloud.description=Stores your data on the cloud, powered by LiplumCloud. You can access them where they are!
 block.cyber-io-hyper-overdrive-sphere.name=Hyper Overdrive Sphere
 block.cyber-io-hyper-overdrive-sphere.description=LIGHT SPEED!!!
 # Items
@@ -37,3 +39,4 @@ bar.cyber-io.is-alive=Is Alive: {0}
 bar.cyber-io.is-projecting=Is Projecting: {0}
 bar.cyber-io.rest-restore=Rest Restore: {0}
 bar.cyber-io.charge=Charge: {0}
+bar.cyber-io.is-asleep=Is Asleep: {0}
