--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -23,6 +23,8 @@ block.cyber-io-cloud.name=Cloud
 block.cyber-io-cloud.description=Stores your data on the cloud, powered by LiplumCloud. You can access them where they are!
 block.cyber-io-hyper-overdrive-sphere.name=Hyper Overdrive Sphere
 block.cyber-io-hyper-overdrive-sphere.description=LIGHT SPEED!!!
+block.cyber-io-deleter.name=Deleter
+block.cyber-io-deleter.description=Radiates holographic waves which has wave-particle duality. Wave properties: Hit AOE. Particle properties: Execute enemies.
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
@@ -40,3 +42,4 @@ bar.cyber-io.is-projecting=Is Projecting: {0}
 bar.cyber-io.rest-restore=Rest Restore: {0}
 bar.cyber-io.charge=Charge: {0}
 bar.cyber-io.is-asleep=Is Asleep: {0}
+bar.cyber-io.last-damage=Last Damage: {0}
