Floating holo-wall

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -40,6 +40,6 @@ bar.cyber-io.cool-down=Cool Down: {0}s
 bar.cyber-io.is-alive=Is Alive: {0}
 bar.cyber-io.is-projecting=Is Projecting: {0}
 bar.cyber-io.rest-restore=Rest Restore: {0}
-bar.cyber-io.charge=Charge: {0}
+bar.cyber-io.charge=Charge: {0}s
 bar.cyber-io.is-asleep=Is Asleep: {0}
-bar.cyber-io.last-damage=Last Damage: {0}
+bar.cyber-io.last-damaged=Last Damage: {0}s
