--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -43,3 +43,7 @@ bar.cyber-io.rest-restore=Rest Restore: {0}
 bar.cyber-io.charge=Charge: {0}s
 bar.cyber-io.is-asleep=Is Asleep: {0}
 bar.cyber-io.last-damaged=Last Damage: {0}s
+#Controls
+control.cyber-io.yes=Yes
+control.cyber-io.no=No
+control.cyber-io.ok=OK
