--- a/build.gradle
+++ b/build.gradle
@@ -114,6 +114,28 @@ task debugJar {
     }
 }
 
+task copyJar {
+    dependsOn jar
+    ext.copyJarFile = { jarFile, modsFolder ->
+        copy {
+            from jarFile
+            into modsFolder
+        }
+    }
+    doLast {
+        var shouldCopy = project.property("AutoCopyModIntoGamePath")
+        if (!shouldCopy)
+            return
+        var jarFile = new File("$buildDir/libs/${project.archivesBaseName}Desktop.jar")
+        if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+            var APPDATA = System.getenv("APPDATA")
+            var modsFolder = APPDATA + '/Mindustry/mods'
+            mkdir modsFolder
+            copyJarFile(jarFile, modsFolder)
+        }
+    }
+}
+
 task deploy(type: Jar) {
     dependsOn jarAndroid
     dependsOn jar
