--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -25,6 +25,8 @@ block.cyber-io-hyper-overdrive-sphere.name=Hyper Overdrive Sphere
 block.cyber-io-hyper-overdrive-sphere.description=LIGHT SPEED!!!
 block.cyber-io-deleter.name=Deleter
 block.cyber-io-deleter.description=Radiates holographic waves which has wave-particle duality. Wave properties: Hit AOE. Particle properties: Execute enemies.
+block.cyber-io-TMTRAINER.name=TMTRAINER
+block.cyber-io-TMTRAINER.description=TMTRAINER
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
