--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ version '1.0'
 
 targetCompatibility = 8
 // I don't use "com.github.Anuken:jabel:$jabelVersion" so sourceCompatibility is not 16 but 8
-// JavaVersion.VERSION_16
 sourceCompatibility = 8
 
 sourceSets.main.java.srcDirs = ["src"]
@@ -33,13 +32,6 @@ repositories {
     maven { url 'https://www.jitpack.io' }
 }
 
-//java 8 backwards compatibility flag
-allprojects {
-    tasks.withType(JavaCompile) {
-        options.compilerArgs.addAll(['--release', '8'])
-    }
-}
-
 dependencies {
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
     compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
@@ -52,7 +44,7 @@ task jarAndroid {
     dependsOn "jar"
 
     doLast {
-        if (!sdkRoot || !new File(sdkRoot).exists()) throw new GradleException("No valid Android SDK found. Ensure that ANDROID_HOME is set to your Android SDK directory.");
+        if (!sdkRoot || !new File(sdkRoot).exists()) throw new GradleException("No valid Android SDK found. Ensure that ANDROID_HOME is set to your Android SDK directory.")
 
         def platformRoot = new File("$sdkRoot/platforms/").listFiles().sort().reverse().find { f -> new File(f, "android.jar").exists() }
 
