--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -27,6 +27,8 @@ block.cyber-io-deleter.name=Deleter
 block.cyber-io-deleter.description=Radiates holographic waves which has wave-particle duality. Wave properties: Hit AOE. Particle properties: Execute enemies.
 block.cyber-io-TMTRAINER.name=TMTRAINER
 block.cyber-io-TMTRAINER.description=TMTRAINER
+block.cyber-io-prism.name=Prism
+block.cyber-io-prism.description=PRISM can copy your bullet because it is for your security.
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
@@ -49,3 +51,8 @@ bar.cyber-io.last-damaged=Last Damage: {0}s
 control.cyber-io.yes=Yes
 control.cyber-io.no=No
 control.cyber-io.ok=OK
+#StatusEffects
+status.cyber-io-infected.name=Infected
+status.cyber-io-infected.description=The infected will hurt based on their current HP.
+status.cyber-io-vulnerable.name=Vulnerable
+status.cyber-io-vulnerable.description=WATCH OUT! They will be dead at any time!
