Tinted liquid bullets!

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -48,6 +48,10 @@ bar.cyber-io.charge=Charge: {0}s
 bar.cyber-io.is-asleep=Is Asleep: {0}
 bar.cyber-io.last-damaged=Last Damage: {0}s
 bar.cyber-io.progress=Progress: {0}%
+bar.cyber-io.prism=Prism
+bar.cyber-io.prism.pl=Prisms
+bar.cyber-io.linked=Linked
+bar.cyber-io.linked.no=No Link
 #Controls
 control.cyber-io.yes=Yes
 control.cyber-io.no=No
