--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -29,6 +29,8 @@ block.cyber-io-TMTRAINER.name=TMTRAINER
 block.cyber-io-TMTRAINER.description=TMTRAINER
 block.cyber-io-prism.name=Prism
 block.cyber-io-prism.description=PRISM can copy your bullet because it is for your security.
+block.cyber-io-prism-obelisk.name=Obelisk
+block.cyber-io-prism-obelisk.description=
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
