--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,8 @@
 # Blocks
 block.cyber-io-ic-machine.name=IC Machine
 block.cyber-io-ic-machine.description=A machine which can make chips.
+block.cyber-io-ic-machine-s.name=IC Maker
+block.cyber-io-ic-machine-s.description=A machine which can make chips in a low speed (NOT ICE!!!)
 block.cyber-io-receiver.name=Receiver
 block.cyber-io-receiver.description=Receives the data.
 block.cyber-io-sender.name=Sender
@@ -20,7 +22,7 @@ block.cyber-io-anti-virus.description=An anti-virus software
 block.cyber-io-underdrive-projector.name=Underdrive Projector
 block.cyber-io-underdrive-projector.description=Slow down the surrounding machines.
 block.cyber-io-cloud.name=Cloud
-block.cyber-io-cloud.description=Stores your data on the cloud, powered by LiplumCloud. You can access them where they are!
+block.cyber-io-cloud.description=Stores your data on the cloud, powered by LiplumCloud. You can access them wherever they are!
 block.cyber-io-hyper-overdrive-sphere.name=Hyper Overdrive Sphere
 block.cyber-io-hyper-overdrive-sphere.description=LIGHT SPEED!!!
 block.cyber-io-deleter.name=Deleter
@@ -28,9 +30,9 @@ block.cyber-io-deleter.description=Radiates holographic waves which has wave-par
 block.cyber-io-TMTRAINER.name=TMTRAINER
 block.cyber-io-TMTRAINER.description=TMTRAINER
 block.cyber-io-prism.name=Prism
-block.cyber-io-prism.description=PRISM can copy your bullet because it is for your security.
+block.cyber-io-prism.description=PRISM can copy your bullets because it is for your security.
 block.cyber-io-prism-obelisk.name=Obelisk
-block.cyber-io-prism-obelisk.description=
+block.cyber-io-prism-obelisk.description=It's watching you.
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
