--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -33,6 +33,8 @@ block.cyber-io-prism.name=Prism
 block.cyber-io-prism.description=PRISM can copy your bullets because it is for your security.
 block.cyber-io-prism-obelisk.name=Obelisk
 block.cyber-io-prism-obelisk.description=It's watching you.
+block.cyber-io-smart-distributor.name=Smart Distributor
+block.cyber-io-smart-distributor.description=Smart Distributor
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
