--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -34,7 +34,9 @@ block.cyber-io-prism.description=PRISM can copy your bullets because it is for y
 block.cyber-io-prism-obelisk.name=Obelisk
 block.cyber-io-prism-obelisk.description=It's watching you.
 block.cyber-io-smart-distributor.name=Smart Distributor
-block.cyber-io-smart-distributor.description=Smart Distributor
+block.cyber-io-smart-distributor.description=One-Click to connect, it's easy to distribute your software.
+block.cyber-io-smart-unloader.name=Smart Unloader
+block.cyber-io-smart-unloader.description=Smart Unloader
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
