--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -60,6 +60,8 @@ bar.cyber-io.prism=Prism
 bar.cyber-io.prism.pl=Prisms
 bar.cyber-io.linked=Linked
 bar.cyber-io.linked.no=No Link
+bar.cyber-io.receiver=Receiver: {0}
+bar.cyber-io.sender=Sender: {0}
 #Controls
 control.cyber-io.yes=Yes
 control.cyber-io.no=No
