--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -36,7 +36,7 @@ block.cyber-io-prism-obelisk.description=It's watching you.
 block.cyber-io-smart-distributor.name=Smart Distributor
 block.cyber-io-smart-distributor.description=One-Click to connect, it's easy to distribute your software.
 block.cyber-io-smart-unloader.name=Smart Unloader
-block.cyber-io-smart-unloader.description=Smart Unloader
+block.cyber-io-smart-unloader.description=Smart Unloader can relieve the heavy pressure of transport and help improve mobility.
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
