--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,8 +1,8 @@
 # Blocks
 block.cyber-io-ic-machine.name=IC Machine
 block.cyber-io-ic-machine.description=A machine which can make chips.
-block.cyber-io-ic-machine-s.name=IC Maker
-block.cyber-io-ic-machine-s.description=A machine which can make chips in a low speed (NOT ICE!!!)
+block.cyber-io-ic-machine-s.name=IC Maker 3000
+block.cyber-io-ic-machine-s.description=A simple machine which can make chips in a low speed (NOT ICE!!!)
 block.cyber-io-receiver.name=Receiver
 block.cyber-io-receiver.description=Receives the data.
 block.cyber-io-sender.name=Sender
