Stream host&client

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -37,6 +37,10 @@ block.cyber-io-smart-distributor.name=Smart Distributor
 block.cyber-io-smart-distributor.description=One-Click to connect, it's easy to distribute your software.
 block.cyber-io-smart-unloader.name=Smart Unloader
 block.cyber-io-smart-unloader.description=Smart Unloader can relieve the heavy pressure of transport and help improve mobility.
+block.cyber-io-smart-stream-client.name=Stream Client
+block.cyber-io-smart-stream-client.description=Clients can get the instant liquid but limited by the network speed.
+block.cyber-io-smart-stream-host.name=Stream Host
+block.cyber-io-smart-stream-host.description=Hosting your stream. Every client can get your broadcast if they like.
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
@@ -64,6 +68,8 @@ bar.cyber-io.receiver=Receiver: {0}
 bar.cyber-io.sender=Sender: {0}
 bar.cyber-io.ani-state-last=Last: {0}
 bar.cyber-io.null=Null
+bar.cyber-io.client=Client: {0}
+bar.cyber-io.host=Host: {0}
 #Controls
 control.cyber-io.yes=Yes
 control.cyber-io.no=No
