--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -37,10 +37,12 @@ block.cyber-io-smart-distributor.name=Smart Distributor
 block.cyber-io-smart-distributor.description=One-Click to connect, it's easy to distribute your software.
 block.cyber-io-smart-unloader.name=Smart Unloader
 block.cyber-io-smart-unloader.description=Smart Unloader can relieve the heavy pressure of transport and help improve mobility.
-block.cyber-io-smart-stream-client.name=Stream Client
-block.cyber-io-smart-stream-client.description=Clients can get the instant liquid but limited by the network speed.
-block.cyber-io-smart-stream-host.name=Stream Host
-block.cyber-io-smart-stream-host.description=Hosting your stream. Every client can get your broadcast if they like.
+block.cyber-io-stream-client.name=Stream Client
+block.cyber-io-stream-client.description=Clients can get the instant liquid but limited by the network speed.
+block.cyber-io-stream-host.name=Stream Host
+block.cyber-io-stream-host.description=Hosting your stream. Every client can get your broadcast if they like.
+block.cyber-io-stream-server.name=Stream Server
+block.cyber-io-stream-server.description=A live-streaming server where you can share personal experience of Mindustry game! Enjoy yourself!
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
