--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -43,6 +43,8 @@ block.cyber-io-stream-host.name=Stream Host
 block.cyber-io-stream-host.description=Hosting your stream. Every client can get your broadcast if they like.
 block.cyber-io-stream-server.name=Stream Server
 block.cyber-io-stream-server.description=A live-streaming server where you can share personal experience of Mindustry game! Enjoy yourself!
+block.cyber-io-jammer.name=Jammer
+block.cyber-io-jammer.description=Jamming devices.
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
