--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -83,3 +83,5 @@ status.cyber-io-infected.name=Infected
 status.cyber-io-infected.description=The infected will hurt based on their current HP.
 status.cyber-io-vulnerable.name=Vulnerable
 status.cyber-io-vulnerable.description=WATCH OUT! They will be dead at any time!
+status.cyber-io-static.name=Static
+status.cyber-io-static.description=Warning! Signal interference detected.
