--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -44,7 +44,7 @@ block.cyber-io-stream-host.description=Hosting your stream. Every client can get
 block.cyber-io-stream-server.name=Stream Server
 block.cyber-io-stream-server.description=A live-streaming server where you can share personal experience of Mindustry game! Enjoy yourself!
 block.cyber-io-jammer.name=Jammer
-block.cyber-io-jammer.description=Jamming devices.
+block.cyber-io-jammer.description=Jamming devices. Warning! Your cell phone may be jammed by it!
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
@@ -85,3 +85,9 @@ status.cyber-io-vulnerable.name=Vulnerable
 status.cyber-io-vulnerable.description=WATCH OUT! They will be dead at any time!
 status.cyber-io-static.name=Static
 status.cyber-io-static.description=Warning! Signal interference detected.
+#Welcome
+welcome.cyber-io.welcome=Welcome to play Cyber IO {0}.
+welcome.cyber-io.news=News: {0}
+welcome.cyber-io.v2.title=Employment Verification
+welcome.cyber-io.v2=Welcome to join us, Plum Star Inc., enjoy this new version of full cybernetic things!\nBut you may have to be worried about the tiresome job connecting those devices.\nAnyway, good luck!
+welcome.cyber-io.v2.read=Join
