More Holo Unit!

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -45,10 +45,22 @@ block.cyber-io-stream-server.name=Stream Server
 block.cyber-io-stream-server.description=A live-streaming server where you can share personal experience of Mindustry game! Enjoy yourself!
 block.cyber-io-jammer.name=Jammer
 block.cyber-io-jammer.description=Jamming devices. Warning! Your cell phone may be jammed by it!
+block.cyber-io-cyberion-mixer.name=Cyberion Mixer
+block.cyber-io-cyberion-mixer.description=In theory, it seems superfluous, but it does work.
+block.cyber-io-holo-projector.name=Holo Projector
+block.cyber-io-holo-projector.description=Projecting holographic units by Cyberion.
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
-#Bars
+# Liquids
+liquid.cyber-io-cyberion.name=Cyberion
+liquid.cyber-io-cyberion.description=An expensive liquid developed by Plum Star Inc., but no one knows how it does work.
+# Units
+unit.cyber-io-holo-miner.name=Holo Miner
+unit.cyber-io-holo-miner.description=A short-lived worker bee projected by Holo Projector.
+unit.cyber-io-holo-fighter.name=Holo Fighter
+unit.cyber-io-holo-fighter.description=An ephemeral fighter projected by Holo Projector.
+# Bars
 bar.cyber-io.generation=Generation {0}
 bar.cyber-io.slow-down=Boost: -{0}%
 bar.cyber-io.efficiency-absorption=EFF Absorb: {0}%
@@ -74,18 +86,22 @@ bar.cyber-io.ani-state-last=Last: {0}
 bar.cyber-io.null=Null
 bar.cyber-io.client=Client: {0}
 bar.cyber-io.host=Host: {0}
-#Controls
+bar.cyber-io.rest-life=Rest Life
+bar.cyber-io.rest-life.figure=Rest Life: {0}s
+# Controls
 control.cyber-io.yes=Yes
 control.cyber-io.no=No
 control.cyber-io.ok=OK
-#StatusEffects
+# StatusEffects
 status.cyber-io-infected.name=Infected
 status.cyber-io-infected.description=The infected will hurt based on their current HP.
 status.cyber-io-vulnerable.name=Vulnerable
 status.cyber-io-vulnerable.description=WATCH OUT! They will be dead at any time!
 status.cyber-io-static.name=Static
 status.cyber-io-static.description=Warning! Signal interference detected.
-#Welcome
+# Abilities
+ability.cyber-io-holo=The holographic-projected units using Cyberion is attenuating over time.
+# Welcome
 welcome.cyber-io.welcome=Welcome to play Cyber IO {0}.
 welcome.cyber-io.news=News: {0}
 welcome.cyber-io.v2.title=Employment Verification
