--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -60,6 +60,12 @@ unit.cyber-io-holo-miner.name=Holo Miner
 unit.cyber-io-holo-miner.description=A short-lived worker bee projected by Holo Projector.
 unit.cyber-io-holo-fighter.name=Holo Fighter
 unit.cyber-io-holo-fighter.description=An ephemeral fighter projected by Holo Projector.
+unit.cyber-io-holo-guardian.name=Holo Guardian
+unit.cyber-io-holo-guardian.description=A guardian projected by Holo Projector, but risk on its neck.
+unit.cyber-io-holo-architect.name=Holo Architect
+unit.cyber-io-holo-architect.description=A builder projected by Holo Projector, but it isn't built.
+unit.cyber-io-holo-supporter.name=Holo Supporter
+unit.cyber-io-holo-supporter.description=A support projected by Holo Projector, but it can't save itself.
 # Bars
 bar.cyber-io.generation=Generation {0}
 bar.cyber-io.slow-down=Boost: -{0}%
