Fix dex not found on Windows

--- a/build.gradle
+++ b/build.gradle
@@ -55,8 +55,15 @@ task jarAndroid {
         def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect { "--classpath $it.path" }.join(" ")
 
         //dex and desugar files - this requires d8 in your PATH
-        "d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar"
-                .execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
+        def paras = "$dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar".toString()
+        try {
+            "d8 $paras".execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
+        } catch (Exception ignored) {
+            def cmdOutput = new ByteArrayOutputStream()
+            "where d8".execute().waitForProcessOutput(cmdOutput, System.err)
+            def d8FullPath = cmdOutput.toString().replace("\r", "").replace("\n", "")
+            "$d8FullPath $paras".execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
+        }
     }
 }
 
