--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -107,9 +107,12 @@ status.cyber-io-static.name=Static
 status.cyber-io-static.description=Warning! Signal interference detected.
 # Abilities
 ability.cyber-io-holo=The holographic-projected units using Cyberion is attenuating over time.
+ability.cyber-io-holo-force-field=Projecting auto-regenerating holographic force field.
 # Welcome
 welcome.cyber-io.welcome=Welcome to play Cyber IO {0}.
 welcome.cyber-io.news=News: {0}
 welcome.cyber-io.v2.title=Employment Verification
 welcome.cyber-io.v2=Welcome to join us, Plum Star Inc., enjoy this new version of full cybernetic things!\nBut you may have to be worried about the tiresome job connecting those devices.\nAnyway, good luck!
 welcome.cyber-io.v2.read=Join
+# Settings
+setting.cyber-io-connection-opacity.name=Connection Opacity
