Always showing connections among senders/receivers is now in graphic settings. :) Removing other languages because using Google Translate and lots of i18n work are the great burdens at present. ;(

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -116,3 +116,4 @@ welcome.cyber-io.v2=Welcome to join us, Plum Star Inc., enjoy this new version o
 welcome.cyber-io.v2.read=Join
 # Settings
 setting.cyber-io-connection-opacity.name=Connection Opacity
+setting.cyber-io-always-show-link.name=Always Show Connection
